--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ h2 {
   z-index: 10;
 
   width: 60rem;
-  height: 100%;
+  height: 100vh;
   background-color: #fff;
 }
 
@@ -504,6 +504,10 @@ h2 {
 /* 780px */
 @media only screen and (max-width: 48.75em) {
   .product-to-buy {
+    width: 100%;
+  }
+
+  .modal {
     width: 100%;
   }
 }
