--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ h2 {
   cursor: pointer;
   width: 100%;
   height: 100%;
+  z-index: 100;
 
   margin: 1px 20px 1px -10px;
 }
@@ -521,6 +522,10 @@ h2 {
 
   .modal {
     width: 100%;
+  }
+
+  .container {
+    margin-bottom: 5rem;
   }
 }
 
